--- a/web/views/layouts/main.handlebars
+++ b/web/views/layouts/main.handlebars
@@ -46,6 +46,9 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                   <li>
+                    <a href="/wetty/ssh{{user.username}}">Shell</a>
+                  </li>
+                  <li>
                     <a href="/logout">Log Out</a>
                   </li>
               {{else}}
