--- a/web/views/layouts/main.handlebars
+++ b/web/views/layouts/main.handlebars
@@ -58,7 +58,7 @@
                 <a href="/signin">Sign In</a>
                 </li>
               </ul>
-              <ul>
+              <ul class="nav navbar-nav navbar-right">
                 <li>
                   <a href="/challenges/">Challenges</a>
                 </li>
