--- a/web/views/layouts/main.handlebars
+++ b/web/views/layouts/main.handlebars
@@ -60,7 +60,7 @@
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li>
-                  <a href="/challenges/">Challenges</a>
+                  <a href="/challenges/index.html">Challenges</a>
                 </li>
               {{/if}}
           </ul>
