Add challenge to home view

--- a/web/views/home.handlebars
+++ b/web/views/home.handlebars
@@ -10,6 +10,7 @@
     </div>
     <div class="panel-body">
       <p>Username: {{user.username}}</p>
+      <p>Current challenge: {{user.challenge}}</p>
       <p>Avatar: <img src="{{user.avatar}}"/></p>
     </div>
   </div>
