--- a/web/frontend/_layouts/home.html
+++ b/web/frontend/_layouts/home.html
@@ -3,10 +3,7 @@ layout: default
 ---
 
 <div class="home">
-	<div id="terminal" class="term-window">
-		Hello
-	</div>
-	<div class="instructions">
-		World
-	</div>
+  <p>Welcome to team yasha's yasha_game, a yasha production directed by yasha with help from yasha and co.</p>
+
+  <p>For challenges, please navigate to the challenges pages :)</p>
 </div>
