/term -> /challenges/term

--- a/web/views/layouts/main.handlebars
+++ b/web/views/layouts/main.handlebars
@@ -49,7 +49,7 @@
                     <a href="/challenges/{{user.challenge}}.html">Current Challenge</a>
                   </li>
                   <li>
-                    <a href="/term">Shell</a>
+                    <a href="/challenges/term">Shell</a>
                   </li>
                   <li>
                     <a href="/logout">Log Out</a>
