--- a/web/frontend/_includes/header.html
+++ b/web/frontend/_includes/header.html
@@ -5,6 +5,13 @@
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
     <a class="head-link" rel="author" href="{{ "/challenge.html" | relative_url }}">{{ "Challenges" | escape }}</a>
+    <p class="head-space"> | <p>
+
+a    <a class="head-link" rel="author" href="{{ "/term" | relative_url }}">{{ "Play In Browser" | escape }}</a>
+
+
+
+
 
   </div>
 </header>
