--- a/web/frontend/_sass/minima/_layout.scss
+++ b/web/frontend/_sass/minima/_layout.scss
@@ -27,7 +27,14 @@
 .head-link {
   color: $text-color;
   line-height: $base-line-height * $base-font-size * 2.25;
+  float: right;
+}
 
+.head-space {
+  color: $text-color;
+  line-height: $base-line-height * $base-font-size * 2.25;
+  padding-right: 10px;
+  padding-left: 10px;
   float: right;
 }
 
