--- a/web/frontend/_includes/header.html
+++ b/web/frontend/_includes/header.html
@@ -7,7 +7,7 @@
     <a class="head-link" rel="author" href="{{ "/challenge.html" | relative_url }}">{{ "Challenges" | escape }}</a>
     <p class="head-space"> | <p>
 
-a    <a class="head-link" rel="author" href="{{ "/term" | relative_url }}">{{ "Play In Browser" | escape }}</a>
+    <a class="head-link" rel="author" href="{{ "/term" | relative_url }}">{{ "Play In Browser" | escape }}</a>
 
 
 
